@@ -652,8 +652,6 @@ bool edgex_metadata_client_ping
     endpoints->metadata.port
   );
 
-  edgex_http_get (lc, &ctx, url, edgex_http_write_cb, err);
-  free (ctx.buff);
-
+  edgex_http_get (lc, &ctx, url, NULL, err);
   return (err->code == 0);
 }
